# rs-avro-maps2keyset

./: Cargo.toml  README.md  build-wasi.sh  rs-avro-maps2keyset  rs-avro-maps2keyset.wasm  run.sh
sample.d/: input.avro  input.avsc  sample.jsonl
src/: avro2rows2keyset.rs  lib.rs  main.rs
